bynkc/tests/fixtures/negative/277_contract_duplicate_name/src/demo/c.bynk
commons demo.c

fn f(x: Int) -> Int
  requires c1: x > 0
  ensures c1: result > 0
{
  x
}
